--- a/NorthwesternAbout/index.html
+++ b/NorthwesternAbout/index.html
@@ -73,7 +73,7 @@
       <li></li>
     </ul>
     <br>
-    <object type="application/x-shockwave-flash" data="zplayer.swf?mp3=http://fightmusic.com/mp3/big10/Northwestern__Go_U_Northwestern__new.mp3&c1=c40cf2&down=1" width="200" height="20"/><param name="movie" value="zplayer.swf?mp3=http://fightmusic.com/mp3/big10/Northwestern__Go_U_Northwestern.mp3&c1=c40cf2&down=1" /></object>
+    <object type="application/x-shockwave-flash" data="zplayer.swf?mp3=/Northwestern__Go_U_Northwestern__new.mp3&c1=c40cf2&down=1" width="200" height="20"/><param name="movie" value="zplayer.swf?mp3=http://fightmusic.com/mp3/big10/Northwestern__Go_U_Northwestern.mp3&c1=c40cf2&down=1" /></object>
     <!--To Top-->
     <br>
     <br>
